:iphone:Fix mobile main spacing:iphone:

--- a/src/components/AsYou/AsYou.css
+++ b/src/components/AsYou/AsYou.css
@@ -176,7 +176,7 @@
     width: 60vw;
     height: auto;
     left: 16.6vw;
-    top: 26vh;
+    top: 28vh;
   }
 
   .Text2 {
@@ -184,7 +184,7 @@
     width: 152px;
     height: 53px;
     left: 16.6vw;
-    top: 80vh;
+    top: 85vh;
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
