--- a/src/components/IWill/IWill.css
+++ b/src/components/IWill/IWill.css
@@ -172,7 +172,7 @@
     width: 130px;
     height: 59px;
     left: 16.6vw;
-    top: 82vh;
+    top: 85vh;
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
